--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
   <script>
-  'use strict';
+  url = windows.location.search
+
+  alert(url)
 
   // call GitZip.zipRepo(url) with your url path to your github folder
   // such as GitZip.zipRepo('https://github.com/kennethgoodman/gitzip/tree/gh-pages/js')
@@ -44,5 +46,6 @@
   req.send();
 
   </script>
+  Hello Xovee!
 </body>
 </html>
