--- a/index.html
+++ b/index.html
@@ -10,40 +10,39 @@
 </head>
 <body>
   <script>
-  url = window.location.search
+  url = window.location.search.substring(1,)
 
   alert(url)
 
-  // call GitZip.zipRepo(url) with your url path to your github folder
-  // such as GitZip.zipRepo('https://github.com/kennethgoodman/gitzip/tree/gh-pages/js')
+  GitZip.zipRepo(url)
 
-  var exampleRx = /^\s*GitZip\.zipRepo\("([^"]+)"\);$/gm;
+  // var exampleRx = /^\s*GitZip\.zipRepo\("([^"]+)"\);$/gm;
 
-  var createButtons = function (urls) {
-    urls.forEach(function (url) {
-      var button = document.createElement('button');
-      button.textContent = url;
-      button.addEventListener('click', function () {
-        GitZip.zipRepo(url);
-      });
-      document.body.appendChild(button);
-      document.body.appendChild(document.createElement('br'));
-    });
-  };
+  // var createButtons = function (urls) {
+  //   urls.forEach(function (url) {
+  //     var button = document.createElement('button');
+  //     button.textContent = url;
+  //     button.addEventListener('click', function () {
+  //       GitZip.zipRepo(url);
+  //     });
+  //     document.body.appendChild(button);
+  //     document.body.appendChild(document.createElement('br'));
+  //   });
+  // };
 
-  // fetches example URLs from the README
-  var req = new XMLHttpRequest();
-  req.open('GET', 'README.md');
-  req.overrideMimeType('text/plain');
-  req.onload = function (ev) {
-    var examples = [];
-    var match;
-    while (match = exampleRx.exec(this.responseText)) {
-      examples.push(match[1]);
-    }
-    createButtons(examples);
-  };
-  req.send();
+  // // fetches example URLs from the README
+  // var req = new XMLHttpRequest();
+  // req.open('GET', 'README.md');
+  // req.overrideMimeType('text/plain');
+  // req.onload = function (ev) {
+  //   var examples = [];
+  //   var match;
+  //   while (match = exampleRx.exec(this.responseText)) {
+  //     examples.push(match[1]);
+  //   }
+  //   createButtons(examples);
+  // };
+  // req.send();
 
   </script>
   Hello Xovee!
