--- a/index.html
+++ b/index.html
@@ -16,35 +16,7 @@
 
   GitZip.zipRepo(url)
 
-  // var exampleRx = /^\s*GitZip\.zipRepo\("([^"]+)"\);$/gm;
-
-  // var createButtons = function (urls) {
-  //   urls.forEach(function (url) {
-  //     var button = document.createElement('button');
-  //     button.textContent = url;
-  //     button.addEventListener('click', function () {
-  //       GitZip.zipRepo(url);
-  //     });
-  //     document.body.appendChild(button);
-  //     document.body.appendChild(document.createElement('br'));
-  //   });
-  // };
-
-  // // fetches example URLs from the README
-  // var req = new XMLHttpRequest();
-  // req.open('GET', 'README.md');
-  // req.overrideMimeType('text/plain');
-  // req.onload = function (ev) {
-  //   var examples = [];
-  //   var match;
-  //   while (match = exampleRx.exec(this.responseText)) {
-  //     examples.push(match[1]);
-  //   }
-  //   createButtons(examples);
-  // };
-  // req.send();
-
   </script>
-  Hello Xovee!
+  正在下载文件，请耐心等待！
 </body>
 </html>
