--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>GitZip Example</title>
+  <title>UESTC Course Resource Download</title>
   <script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
   <script type="text/javascript" src="js/FileSaver.min.js"></script>
   <script type="text/javascript" src="js/jszip.min.js"></script>
@@ -11,8 +11,6 @@
 <body>
   <script>
   url = window.location.search.substring(1,)
-
-  alert(url)
 
   GitZip.zipRepo(url)
 
