--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </script>
 
   <div class='container'>
-      <img class='u-max-full-width' src='./img/repo-banner.png'>
+      <img id='banner' class='u-max-full-width' src='./img/repo-banner.png'>
   </div>
 
   <form>
@@ -53,7 +53,7 @@
       </div>
 
       <div class='row'>
-          <button id='d-button' class="button-primary"><h5>下载</h5></button>
+          <input type='button' id='d-button' class="button-primary" value="下载"></input>
       </div>
     </div>
   </form>
@@ -77,7 +77,9 @@
 
   $('#d-button').click(function(){
     url = $('#src-url').val();
-    window.location = 'https://xovee.github.io/gitzip/?' + url
+    GitZip.zipRepo(url);
+    $('form').hide();
+    $('#download').show();
   })
 
   $('#return').click(function(){
