--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+    <!-- This site is maded by http://getskeleton.com/. -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A layout example that shows off a responsive product landing page.">
