--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
       </div>
 
       <div class='row'>
+          <button class='return'><h5><strong>返回首页</strong></h5></button>
           <input type='button' id='d-button' class="button-primary" value="下载"></input>
       </div>
     </div>
