--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
       </div>
 
       <div class='row'>
-          <button class='return'><h5><strong>返回首页</strong></h5></button>
-          <input type='button' id='d-button' class="button-primary" value="下载"></input>
+        <button class='back-github button-primary'><h5><strong>返回仓库</strong></h5></button>
+          <input type='button' id='d-button' class="button-primary" value="下载资源"></input>
       </div>
     </div>
   </form>
