--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
       </div>
 
       <div class='row'>
-        <button class='back-github button-primary'><h5><strong>返回仓库</strong></h5></button>
-          <input type='button' id='d-button' class="button-primary" value="下载资源"></input>
+          <input type='button' id='git-button' class='back-github' value='返回仓库'>
+          <input type='button' id='d-button' class="button-primary" value="下载资源">
       </div>
     </div>
   </form>
