--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <a href="https://github.com/Xovee/uestc-course">
                   <i>返回仓库</i>
               </a>
-              <a href="#">
+              <a href="https://xovee.cn">
                   <i>访问 Xovee 主页</i>
               </a>
               <a href="index.html">
@@ -86,7 +86,7 @@
       </blockquote>
 
       <footer>
-          © 2018-2022 Xovee Xu 徐增
+          © 2019-2022 Xovee Xu 徐增
       </footer>
 
 
