--- a/index.html
+++ b/index.html
@@ -115,6 +115,16 @@
 
   })
 
+  <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RKRTC1TG5F"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-RKRTC1TG5F');
+    </script>
+
   </script>
 
 </body>
