--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <a href="https://github.com/Xovee/uestc-course">
                   <i>返回仓库</i>
               </a>
-              <a href="https://xovee.cn">
+              <a href="https://www.xoveexu.com">
                   <i>访问 Xovee 主页</i>
               </a>
               <a href="index.html">
@@ -73,7 +73,7 @@
       <section>
           <aside>
               <h2>Xovee Xu</h2>
-              <p><a href="https://xovee.cn" target="_blank">Xovee Xu</a> 是 <a href="https://github.com/Xovee/uestc-course" target="_blank">UESTC-Course</a> 的创建者和维护者。他现在是电子科技大学的一名计算机科学博士生。 </p>
+              <p><a href="https://www.xoveexu.com" target="_blank">Xovee Xu</a> 是 <a href="https://github.com/Xovee/uestc-course" target="_blank">UESTC-Course</a> 的创建者和维护者。他现在是电子科技大学的一名计算机科学博士生。 </p>
           </aside>
           <aside>
               <h2>资源贡献</h2>
