--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           </aside>
           <aside>
               <h2>资源贡献</h2>
-              <p>仓库的发展离不开大家的支持。贡献资源请参考该<a href="https://github.com/Xovee/uestc-course/blob/main/assets/%E8%B4%A1%E7%8C%AE%E6%8C%87%E5%8D%97.md" target="_blank">指南</a>。</p>
+              <p>仓库的发展离不开大家的支持。贡献资源请参考该<a href="https://github.com/Xovee/uestc-course/blob/main/assets/%E8%B4%A1%E7%8C%AE%E6%8C%87%E5%8D%97.md" target="_blank">指南</a>，或者邮件联系我：xovee at std.uestc.edu.cn</p>
           </aside>
           <aside>
               <h2>Be patient!</h2>
