--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
       <section>
           <aside>
               <h2>Xovee Xu</h2>
-              <p><a href="https://www.xoveexu.com" target="_blank">Xovee Xu</a> 是 <a href="https://github.com/Xovee/uestc-course" target="_blank">UESTC-Course</a> 的创建者和维护者。他现在是电子科技大学的一名计算机科学博士生。 </p>
+              <p><a href="https://www.xoveexu.com" target="_blank">Xovee Xu</a> (徐增) 是 <a href="https://github.com/Xovee/uestc-course" target="_blank">UESTC-Course</a> 的创建者和维护者。他是一名博士研究生，就读于电子科技大学计算机科学与工程学院。 </p>
           </aside>
           <aside>
               <h2>资源贡献</h2>
-              <p>仓库的发展离不开大家的支持。贡献资源请参考该<a href="https://github.com/Xovee/uestc-course/blob/main/assets/%E8%B4%A1%E7%8C%AE%E6%8C%87%E5%8D%97.md" target="_blank">指南</a>，或者邮件联系我：xovee at std.uestc.edu.cn</p>
+              <p>仓库的发展离不开大家的支持。贡献资源请参考该<a href="https://github.com/Xovee/uestc-course/blob/main/assets/%E8%B4%A1%E7%8C%AE%E6%8C%87%E5%8D%97.md" target="_blank">指南</a>，或者邮件联系我：xovee.xu at gmail.com</p>
           </aside>
           <aside>
               <h2>Be patient!</h2>
